--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-PaperMod"]
 	path = themes/PaperMod
-	url = git://github.com/adityatelange/hugo-PaperMod
+	url = git://github.com/adityatelange/hugo-PaperMod.git
