--- a/config.yaml
+++ b/config.yaml
@@ -63,7 +63,7 @@ languages:
             weight: 1
           - identifier: home
             name: 🏠主页
-            url: /
+            url: wrbz15/
             weight: 2
           - identifier: posts
             name: 📚文章
